--- a/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Build.Tasks.csproj
+++ b/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Build.Tasks.csproj
@@ -38,25 +38,23 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ILRepack" Version="2.0.18" />
-    <PackageReference Include="Irony" />
-    <PackageReference Include="Newtonsoft.Json" Version="$(NewtonsoftJsonPackageVersion)" />
-    <PackageReference Include="NuGet.Common" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.Configuration" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.DependencyResolver.Core" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.Frameworks" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.LibraryModel" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.Packaging" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.Packaging.Core" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.ProjectModel" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.Protocol" Version="$(NuGetApiPackageVersion)" />
-    <PackageReference Include="NuGet.Versioning" Version="$(NuGetApiPackageVersion)" />
+    <PackageReference Include="Newtonsoft.Json" />
+    <PackageReference Include="NuGet.Common" />
+    <PackageReference Include="NuGet.Configuration" />
+    <PackageReference Include="NuGet.DependencyResolver.Core" />
+    <PackageReference Include="NuGet.Frameworks" />
+    <PackageReference Include="NuGet.LibraryModel" />
+    <PackageReference Include="NuGet.Packaging" />
+    <PackageReference Include="NuGet.Packaging.Core" />
+    <PackageReference Include="NuGet.ProjectModel" />
+    <PackageReference Include="NuGet.Protocol" />
+    <PackageReference Include="NuGet.Versioning" />
     <PackageReference Include="System.CodeDom" />
-    <PackageReference Include="System.Reflection.Metadata" Version="6.0.1" />
-    <PackageReference Include="System.Runtime" Version="4.3.1" />
-    <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
-    <PackageReference Include="K4os.Hash.xxHash" Version="1.0.6" />
-    <PackageReference Include="ELFSharp" Version="$(ELFSharpVersion)" />
+    <PackageReference Include="System.Reflection.Metadata" />
+    <PackageReference Include="System.Runtime" />
+    <PackageReference Include="System.Runtime.InteropServices" />
+    <PackageReference Include="K4os.Hash.xxHash" />
+    <PackageReference Include="ELFSharp" />
   </ItemGroup>
 
   <ItemGroup>
